2019-06-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use G_DECLARE_DERIVABLE_TYPE to declare LibBalsaServer

	and provide and use the necessary getters and setters.

	* libbalsa/folder-scanners.c (libbalsa_scanner_imap_tree):
	* libbalsa/imap-server.c (libbalsa_imap_server_set_username),
	(libbalsa_imap_server_set_host), (libbalsa_imap_server_init),
	(is_info_cb), (lb_imap_server_info_new),
	(libbalsa_imap_server_new_from_config), (handle_connection_error),
	(libbalsa_imap_server_get_handle),
	(libbalsa_imap_server_get_handle_with_user),
	(libbalsa_imap_server_subscriptions):
	* libbalsa/mailbox_imap.c (get_header_cache_path),
	(get_cache_name_pair), (libbalsa_mailbox_imap_reconnect),
	(libbalsa_imap_url), (libbalsa_mailbox_imap_add_messages),
	(libbalsa_mailbox_imap_messages_copy):
	* libbalsa/mailbox_pop3.c (libbalsa_mailbox_pop3_init),
	(libbalsa_mailbox_pop3_startup), (update_msg_list),
	(libbalsa_mailbox_pop3_check):
	* libbalsa/send.c (lbs_check_reachable_cb),
	(lbs_process_queue_init_session):
	* libbalsa/server-config.c (libbalsa_server_cfg_new),
	(libbalsa_server_cfg_assign_server), (server_cfg_security_widget):
	* libbalsa/server.c (libbalsa_server_class_init),
	(libbalsa_server_init), (libbalsa_server_finalize),
	(libbalsa_server_set_password), (lbs_get_password),
	(libbalsa_server_real_set_username),
	(libbalsa_server_real_set_host),
	(libbalsa_server_load_security_config), (store_password_libsecret),
	(load_password_libsecret), (erase_password_libsecret),
	(libbalsa_server_load_config), (libbalsa_server_save_config),
	(libbalsa_server_get_auth), (libbalsa_server_get_cert_pass),
	(libbalsa_server_test_can_reach_full),
	(libbalsa_server_test_can_reach), (libbalsa_server_get_host),
	(libbalsa_server_get_user), (libbalsa_server_get_cert_file),
	(libbalsa_server_get_protocol), (libbalsa_server_get_password),
	(libbalsa_server_get_cert_passphrase),
	(libbalsa_server_get_security),
	(libbalsa_server_get_try_anonymous),