@@ -1,3 +1,14 @@
+2019-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaImapServer
+
+	The object was already private.
+
+	* libbalsa/imap-server.c (libbalsa_imap_server_set_username),
+	(libbalsa_imap_server_set_host), (libbalsa_imap_server_class_init),
+	(libbalsa_imap_server_finalize):
+	* libbalsa/imap-server.h:
+
 2019-06-07  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	Use G_DECLARE_DERIVABLE_TYPE to declare LibBalsaServer
